--- a/AplicacionEscritorio/AplicacionEscritorio/AplicacionEscritorio.csproj
+++ b/AplicacionEscritorio/AplicacionEscritorio/AplicacionEscritorio.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="ListaPreguntas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListaPreguntas.Designer.cs">
+      <DependentUpon>ListaPreguntas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Modificar Pregunta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respuesta.cs" />
+    <EmbeddedResource Include="ListaPreguntas.resx">
+      <DependentUpon>ListaPreguntas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Modificar Pregunta.resx">
       <DependentUpon>Modificar Pregunta.cs</DependentUpon>
     </EmbeddedResource>
@@ -104,6 +113,8 @@
   <ItemGroup>
     <Content Include="Resources\castella.png" />
     <Content Include="Resources\catala.png" />
+    <None Include="Resources\Fondopantalla1.png" />
+    <None Include="Resources\insert-picture-icon.png" />
     <None Include="Resources\English.png" />
     <None Include="Resources\Espana.png" />
     <None Include="Resources\Catalana.png" />
