--- a/AplicacionEscritorio/AplicacionEscritorio/AplicacionEscritorio.csproj
+++ b/AplicacionEscritorio/AplicacionEscritorio/AplicacionEscritorio.csproj
@@ -51,6 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="ListaPersonajes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListaPersonajes.Designer.cs">
+      <DependentUpon>ListaPersonajes.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListaPreguntas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respuesta.cs" />
+    <EmbeddedResource Include="ListaPersonajes.resx">
+      <DependentUpon>ListaPersonajes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ListaPreguntas.resx">
       <DependentUpon>ListaPreguntas.cs</DependentUpon>
     </EmbeddedResource>
