--- a/AplicacionEscritorio/AplicacionEscritorio/AplicacionEscritorio.csproj
+++ b/AplicacionEscritorio/AplicacionEscritorio/AplicacionEscritorio.csproj
@@ -81,6 +81,12 @@
     <Compile Include="NuevaPregunta.Designer.cs">
       <DependentUpon>NuevaPregunta.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModificarPersonaje.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarPersonaje.Designer.cs">
+      <DependentUpon>ModificarPersonaje.cs</DependentUpon>
+    </Compile>
     <Compile Include="NuevoPersonaje.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="NuevaPregunta.resx">
       <DependentUpon>NuevaPregunta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarPersonaje.resx">
+      <DependentUpon>ModificarPersonaje.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NuevoPersonaje.resx">
       <DependentUpon>NuevoPersonaje.cs</DependentUpon>
